# MISIS

./: README.md  pyproject.toml
data/lab04/: a.csv  input.txt
data/lab08/: students_input.json  students_output.json
data/lab09/: students.csv
data/samples/: cities.csv  people.csv  people.json  people.txt
lab08/: models.py  serialize.py
src/data/lab04/: a.txt
src/lab01/: 01_greeting.py  02_sum_avg.py  03_discount_vat.py  04_minutes_to_hhmm.py  05_initials_and_len.py  06_present.py  07_literatur.py
src/lab02/: README.md  arrays.py  matrix.py  tuples.py
src/lab03/: README.md  run_text_lib.py  text_status.py
src/lab04/: README.md  io_txt_csv.py  text_report.py
src/lab05/: README.md  csv_xlsx.py  json_csv.py  people_from_csv.json
src/lab06/: README.md  cli_convert.py  cli_text.py
src/lab07/: README.md
src/lab08/: README.md
src/lab09/: README.md  group.py  text.py
src/lab10/: README.md  linked_list.py  structures.py
src/lib/: text.py
tests/: test_json_csv.py  test_text.py
