#Build Declaration
[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

#МProject Metadata
##Name
[project]
name = "spam-eggs"
##version
version = "2025.0.0"

#Dependencies
##For declaring optional dependencies
[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "black>=24.0", #organização do código - estilo
  "ruff>=0.6"
]
##For runtime dependencies, write:
dependencies = [
  "requests>=2.32",
  "pandas>=2.2"
]